--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,3 +21,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
+
+      - name: 🔗 Fetch deployed URL
+        run: |
+          echo "🌐 Site deployed at: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}"
