ci(append-pages-url): update workflow to only run for student repo
Signed-off-by: shytypes <abbaadamu302@gmail.com>

--- a/.github/workflows/append-pages-url.yml
+++ b/.github/workflows/append-pages-url.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   update-readme:
     runs-on: ubuntu-latest
-    # if: github.repository_owner != 'shytypes'
+    if: github.repository_owner != 'shytypes' && github.repository_owner != 'AdamuAbba'
 
     steps:
       - name: Checkout code
