--- a/.github/workflows/append-pages-url.yml
+++ b/.github/workflows/append-pages-url.yml
@@ -7,7 +7,9 @@ on:
 jobs:
   update-readme:
     runs-on: ubuntu-latest
-    if: github.repository_owner != 'shytypes' && github.repository_owner != 'AdamuAbba'
+    if: |
+      github.event.repository.name != 'vanilla-web-dev-speedrun-portfolio-assessment-portfolio-assignment' &&
+      github.event.repository.name != 'portfolio-starter-code'
 
     steps:
       - name: Checkout code
